[gd_scene load_steps=20 format=3 uid="uid://5sh8ysqtjphu"]

[ext_resource type="Script" path="res://Scripts/robobo.gd" id="1_ggmin"]
[ext_resource type="Texture2D" uid="uid://cynevdj11eaow" path="res://Sprites/Robobo-Sheet.png" id="2_ufc4t"]
[ext_resource type="Shader" uid="uid://cvnhg12jej166" path="res://Shaders/hit_flash.tres" id="2_vidyg"]
[ext_resource type="Script" path="res://Scripts/Components/move_component.gd" id="3_7q4pd"]
[ext_resource type="Script" path="res://Scripts/Components/health_component.gd" id="4_ta6m1"]
[ext_resource type="Script" path="res://Scripts/Components/pathfinding_component.gd" id="5_iqnia"]
[ext_resource type="Script" path="res://Scripts/Components/hit_flash_component.gd" id="5_itd1y"]
[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="6_rku7w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3kr8"]
size = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5maqu"]
resource_local_to_scene = true
shader = ExtResource("2_vidyg")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_50cj8"]
atlas = ExtResource("2_ufc4t")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s7be"]
atlas = ExtResource("2_ufc4t")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxb0k"]
atlas = ExtResource("2_ufc4t")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uenc"]
atlas = ExtResource("2_ufc4t")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kl6wh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cj8")
}],
"loop": true,
"name": &"Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s7be")
}],
"loop": true,
"name": &"Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxb0k")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uenc")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6cedt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashComponent:is_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_34r4d"]
resource_name = "hit_flash"
length = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashComponent:is_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33rk8"]
_data = {
"RESET": SubResource("Animation_6cedt"),
"hit_flash": SubResource("Animation_34r4d")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4ek7"]
size = Vector2(12, 21)

[node name="Robobo" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_ggmin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_c3kr8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_5maqu")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_kl6wh")
animation = &"Front"
autoplay = "Front"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_7q4pd")
actor = NodePath("..")
speed = 1000

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_ta6m1")
max_health = 100

[node name="HitFlashComponent" type="AnimationPlayer" parent="." node_paths=PackedStringArray("actor")]
libraries = {
"": SubResource("AnimationLibrary_33rk8")
}
script = ExtResource("5_itd1y")
actor = NodePath("../AnimatedSprite2D")

[node name="PathfindingComponent" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("5_iqnia")
actor = NodePath("..")
move_component = NodePath("../MoveComponent")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "hit_flash_animation")]
position = Vector2(0, -16)
script = ExtResource("6_rku7w")
health_component = NodePath("../HealthComponent")
hit_flash_animation = NodePath("../HitFlashComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_c4ek7")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
